--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/webtech
+spring.datasource.url=jdbc:mysql://containers-us-west-203.railway.app:5615/railway
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=7afVm0NnWgrGobXnwKOr
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
